--- a/front-end/ui/css/style.css
+++ b/front-end/ui/css/style.css
@@ -522,10 +522,9 @@ header img.logotype {
     left: 0;
     right: 0;
  
-    margin: 0 .4em 0 auto;
-    padding: 2px;
+    margin: 0.1em .1em 0 auto;
  
-    height: 60%;
+    height: 100%;
  
     background: white;
     border-radius: 2px;
